CP-9:feat:reorganize code